force-app/src/objects/OrderApi__Receipt_R__c.object
<CustomObject>
    <description>The Receipt (R) object tracks the reporting currency for payments and refunds when Fonteva&apos;s multi-currency is enabled.</description>
    <fields>
        <fullName>OrderApi__Business_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relates this receipt to the business group.</description>
        <inlineHelpText>Relates this receipt to the business group.</inlineHelpText>
        <label>Business Group</label>
        <referenceTo>OrderApi__Business_Group__c</referenceTo>
        <relationshipLabel>Receipts (R)</relationshipLabel>
        <relationshipName>Receipts_R</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**System Calculated** Checked when the Receipt is related to a customer payment.</description>
        <inlineHelpText>**System Calculated** Checked when the Receipt is related to a customer payment.</inlineHelpText>
        <label>Is Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Refund__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**System Calculated** Checked when the Receipt is for a customer refund</description>
        <inlineHelpText>**System Calculated** Checked when the Receipt is for a customer refund</inlineHelpText>
        <label>Is Refund</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Receipt_Reference__c</fullName>
        <description>System field that creates a one to one relationship to a receipt.</description>
        <externalId>true</externalId>
        <inlineHelpText>System field that creates a one to one relationship to a receipt.</inlineHelpText>
        <label>Receipt Reference</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Total__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>This value stores the sum of the payment&apos;s total price paid for each item in the reporting currency.</description>
        <inlineHelpText>This value stores the sum of the payment&apos;s total price paid for each item in the reporting currency.</inlineHelpText>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Receipt (R)</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Receipt (R) Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Receipts (R)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>